# backend/docs/swagger.yaml
@@ -1,6 +1,35 @@
 basePath: /
 definitions:
-  dto.Account:
+  dto.AccountByManager:
+    properties:
+      dob:
+        type: string
+      phone:
+        type: string
+      status:
+        type: integer
+      user_id:
+        type: integer
+    type: object
+  dto.AccountOwnerUpdate:
+    properties:
+      dob:
+        type: string
+      id:
+        type: integer
+      phone:
+        type: string
+    required:
+    - id
+    type: object
+  dto.AccountOwnerUpdateRequest:
+    properties:
+      dob:
+        type: string
+      phone:
+        type: string
+    type: object
+  dto.GetAccount:
     properties:
       created_at:
         type: string
@@ -90,20 +119,6 @@ definitions:
         type: string
     required:
     - email
-    type: object
-  dto.User:
-    properties:
-      created_at:
-        type: string
-      email:
-        type: string
-      id:
-        type: integer
-      password:
-        description: validate:"gte=6,lte=50"`
-        type: string
-    required:
-    - id
     type: object
   dto.UserByManager:
     properties:
@@ -208,7 +223,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/dto.Account'
+              $ref: '#/definitions/dto.GetAccount'
             type: array
       security:
       - ApiKeyAuth: []
@@ -226,7 +241,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/dto.Account'
+            $ref: '#/definitions/dto.GetAccount'
       security:
       - ApiKeyAuth: []
       summary: get account
@@ -238,19 +253,19 @@ paths:
       - application/json
       description: update own account by id
       parameters:
-      - description: Account
+      - description: AccountOwnerUpdateRequest
         in: body
         name: message
         required: true
         schema:
-          $ref: '#/definitions/dto.Account'
+          $ref: '#/definitions/dto.AccountOwnerUpdateRequest'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/dto.Account'
+            $ref: '#/definitions/dto.AccountOwnerUpdate'
       security:
       - ApiKeyAuth: []
       summary: update account
@@ -302,7 +317,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/dto.User'
+            type: string
       summary: authenticate
       tags:
       - auth
@@ -312,19 +327,19 @@ paths:
       - application/json
       description: updating an account by manager
       parameters:
-      - description: Account
+      - description: AccountByManager
         in: body
         name: message
         required: true
         schema:
-          $ref: '#/definitions/dto.Account'
+          $ref: '#/definitions/dto.AccountByManager'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/dto.Account'
+            $ref: '#/definitions/dto.GetAccount'
       security:
       - ApiKeyAuth: []
       summary: update an account
@@ -336,19 +351,19 @@ paths:
       - application/json
       description: creating an account by manager
       parameters:
-      - description: Account
+      - description: AccountByManager
         in: body
         name: message
         required: true
         schema:
-          $ref: '#/definitions/dto.Account'
+          $ref: '#/definitions/dto.AccountByManager'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/dto.Account'
+            $ref: '#/definitions/dto.GetAccount'
       security:
       - ApiKeyAuth: []
       summary: create an account
