# backend/internal/dto/account_by_manager.go
@@ -1,0 +1,33 @@
+package dto
+
+import (
+	"time"
+
+	"github.com/ZmaximillianZ/local-chain/internal/models"
+)
+
+type AccountByManager struct {
+	Status int `json:"status"`
+	UserID int `json:"user_id"`
+	AccountOwnerUpdateRequest
+}
+
+func LoadAccountByManagerModelFromDTO(dto *AccountByManager) *models.Account {
+	return &models.Account{
+		Phone:     dto.Phone,
+		Dob:       dto.Dob,
+		Status:    dto.Status,
+		UpdatedAt: time.Now(),
+	}
+}
+
+func LoadAccountByManagerDTOFromModel(model *models.Account) *AccountByManager {
+	return &AccountByManager{
+		Status: model.Status,
+		UserID: model.UserID,
+		AccountOwnerUpdateRequest: AccountOwnerUpdateRequest{
+			Dob:   model.Dob,
+			Phone: model.Phone,
+		},
+	}
+}
